--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
     "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
